syntax = "proto3";

package questionnaire;

import "google/protobuf/timestamp.proto";

message Answer {
  string id = 1;
  int32 answer = 2;
  string question = 3;
  string user = 4;
  string status = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message MessageResponse {
  int32 code = 1;
  string message = 2;
}

message AnswersResponse {
  int32 code = 1;
  repeated Answer data = 2;
}

message AnswerResponse {
  int32 code = 1;
  Answer data = 2;
}

message GetAllAnswers { 
  string access_token = 1; 
  map<string, string> request_query = 2;
}

message GetOneAnswer { 
  string access_token = 1; 
  string id = 2;
}

message CreateAnswer { 
  string access_token = 1; 
  string question = 2;
  int32 answer = 3;
  string status = 5;
}

message UpdateAnswer { 
  string access_token = 1; 
  int32 answer = 3;
  string status = 5;
  string id = 6;
}

message DeleteAnswer { 
  string access_token = 1; 
  string id = 2;
}